--- a/cloud/Dockerfile
+++ b/cloud/Dockerfile
@@ -1,6 +1,13 @@
 FROM registry.access.redhat.com/ubi8/ubi
 
-RUN dnf install -y python3 git openssh-clients && \
+RUN dnf install -y \
+yum-utils && \
+yum-config-manager --add-repo https://rpm.releases.hashicorp.com/RHEL/hashicorp.repo && \
+dnf -y install \
+python3 \
+git \
+terraform \
+openssh-clients && \
 dnf clean all && \
 pip3 install --no-cache-dir --upgrade pip && \
 pip3 install --no-cache-dir \
